tests/baselines/reference/importNonExternalModule.errors.txt
==== tests/cases/compiler/foo_1.ts (3 errors) ====
    import foo = require("./foo_0");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! foo_1.ts(1,1): error TS2071: Unable to resolve external module '"./foo_0"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! foo_1.ts(1,1): error TS2072: Module cannot be aliased to a non-module type.
    // Import should fail.  foo_0 not an external module
    if(foo.answer === 42){
       ~~~
!!! foo_1.ts(3,4): error TS2095: Could not find symbol 'foo'.
    
    }
    
==== tests/cases/compiler/foo_0.ts (0 errors) ====
    module foo {
        export var answer = 42;
    }
    